[project]
name = "network_qa"
version = "0.1.0"
description = "Quality-assurance metrics + decisions for the r01network pipeline (imported by network_fmri and other orchestrators)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nibabel>=5",
]

[project.scripts]
nf-qa-runs = "network_qa.qa_runs:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_qa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
